--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Eyepetizer</string>
+
+    <string name="tab_bar_text_home">精选</string>
+    <string name="tab_bar_text_discover">发现</string>
+    <string name="tab_bar_text_ad">作者</string>
+    <string name="tab_bar_text_me">我的</string>
 </resources>
